--- a/Doraemon.css
+++ b/Doraemon.css
@@ -1,106 +1,104 @@
-/* Learned from http://purecss3.net/doraemon/doraemon_css3.html */
+r/* Retrieved from http://purecss3.net/doraemon/doraemon_css3.html */
 
 body {
-       background: #fff;
-     
-   
+       background: #fff;        
 }
 #doraemon {
-           position: relative;
-		  margin: 50px; 
+        position: relative;
+	margin: 50px; 
 }
 #head_light{
-            width: 50px;
-			height: 50px;
-			transform: rotate(20deg);
-			          -webkit-transform: rotate(20deg);
-					  -moz-transform: rotate(20deg);
-					  -o-transform: rotate(20deg);
-					  -ms-transform: rotate(20deg);
-		    box-shadow: 80px 20px 50px #fff;
-			          -webkit-box-shadow: 80px 20px 55px #fff;
-					  -moz-box-shadow: 80px 20px 50px #fff;
-            border-radius: 45px;
-			          -webkit-border-radius: 45px;
-					  -moz-border-radius: 60px;
-		    position: absolute;
-			top: -20px;
-			left: 170px;
-			opacity: 0.5;			          
+        width: 50px;
+	height: 50px;
+	transform: rotate(20deg);
+	-webkit-transform: rotate(20deg);
+	-moz-transform: rotate(20deg);
+	-o-transform: rotate(20deg);
+	-ms-transform: rotate(20deg);
+	box-shadow: 80px 20px 50px #fff;
+	-webkit-box-shadow: 80px 20px 55px #fff;
+	-moz-box-shadow: 80px 20px 50px #fff;
+        border-radius: 45px;
+	-webkit-border-radius: 45px;
+	-moz-border-radius: 60px;
+	position: absolute;
+	top: -20px;
+	left: 170px;
+	opacity: 0.5;			          
 }
 #face {
-       position: relative;
-	   width: 310px;
-	   height: 300px;
-	   border-radius: 146px;
-	          -webkit-border-radius: 146px; 
-			  -moz-border-radius: 146px;
-	   background: #07beea;
-	   background: linear-gradient(right top, #fff, #07beea 20%, #10a6ce 73%, #000 95%,#000 155%);
-               background: -webkit-linear-gradient(right top, #fff, #07beea 20%, #10a6ce 73%, #000 95%,#000 155%);
-               background: -moz-linear-gradient(right top, #fff, #07beea 20%, #10a6ce 73%, #000 95%,#000 155%);
-               background: -o-linear-gradient(right top, #fff, #07beea 20%, #10a6ce 73%, #000 95%,#000 155%);
-               background: -ms-linear-gradient(right top, #fff, #07beea 20%, #10a6ce 73%, #000 95%,#000 155%);
-       border: #333 2px solid;
-	   top: 15px;
-	   left: 222px;
-	   box-shadow: -5px 10px 15px rgba(0,0,0,0.45);
-	             -webkit-box-shadow: -5px 10px 15px rgba(0,0,0,0.45);
-				 -moz-box-shadow: -5px 10px 15px rgba(0,0,0,0.45); 
+        position: relative;
+	width: 310px;
+	height: 300px;
+	border-radius: 146px;
+	-webkit-border-radius: 146px; 
+	-moz-border-radius: 146px;
+	background: #07beea;
+	background: linear-gradient(right top, #fff, #07beea 20%, #10a6ce 73%, #000 95%,#000 155%);
+        background: -webkit-linear-gradient(right top, #fff, #07beea 20%, #10a6ce 73%, #000 95%,#000 155%);
+        background: -moz-linear-gradient(right top, #fff, #07beea 20%, #10a6ce 73%, #000 95%,#000 155%);
+        background: -o-linear-gradient(right top, #fff, #07beea 20%, #10a6ce 73%, #000 95%,#000 155%);
+        background: -ms-linear-gradient(right top, #fff, #07beea 20%, #10a6ce 73%, #000 95%,#000 155%);
+        border: #333 2px solid;
+	top: 15px;
+	left: 222px;
+	box-shadow: -5px 10px 15px rgba(0,0,0,0.45);
+	-webkit-box-shadow: -5px 10px 15px rgba(0,0,0,0.45);
+	-moz-box-shadow: -5px 10px 15px rgba(0,0,0,0.45); 
 }
 #base {
         position: relative;
-		top:-5px;
+	top:-5px;
 }
 #base_white {
-             position: absolute;
-			 border: #000 2px solid;
-			 width: 264px;
-			 height: 196px;
-			 border-radius: 150px 150px;
-			          -webkit-border-radius: 150px 150px;
-					  -moz-border-radius: 150px 150px;
-			 background: #fff;
-			 background: linear-gradient(right top,#fff,#fff 75%, #eee 83%; #999 90%, #444 95%, #000);
-                     background: -webkit-linear-gradient(right top,#fff,#fff 75%, #eee 83%; #999 90%, #444 95%, #000);
-                     background: -moz-linear-gradient(right top,#fff,#fff 75%, #eee 83%; #999 90%, #444 95%, #000);
-                     background: -o-linear-gradient(right top,#fff,#fff 75%, #eee 83%; #999 90%, #444 95%, #000);
-                     background: -ms-linear-gradient(right top,#fff,#fff 75%, #eee 83%; #999 90%, #444 95%, #000);
-             z-index: 1;
-			 top: 85px;
-			 left: 22px;
+        position: absolute;
+	border: #000 2px solid;
+	width: 264px;
+	height: 196px;
+	border-radius: 150px 150px;
+	-webkit-border-radius: 150px 150px;
+	-moz-border-radius: 150px 150px;
+	background: #fff;
+	background: linear-gradient(right top,#fff,#fff 75%, #eee 83%; #999 90%, #444 95%, #000);
+        background: -webkit-linear-gradient(right top,#fff,#fff 75%, #eee 83%; #999 90%, #444 95%, #000);
+        background: -moz-linear-gradient(right top,#fff,#fff 75%, #eee 83%; #999 90%, #444 95%, #000);
+        background: -o-linear-gradient(right top,#fff,#fff 75%, #eee 83%; #999 90%, #444 95%, #000);
+        background: -ms-linear-gradient(right top,#fff,#fff 75%, #eee 83%; #999 90%, #444 95%, #000);
+        z-index: 1;
+	top: 85px;
+	left: 22px;
 }
 #eyes {
         position: relative;
-		top: -5px;
+	top: -5px;
 }
 .eye {
-      position: absolute;
-	  border-radius: 35px 35px; 
-	         	  -webkit-border-radius: 35px 35px;
-             	  -moz-border-radius: 35px 35px;
-	  border: 2px solid #000;
-	  width: 72px;
-	  height: 83px;
-	  z-index: 20;
-	  background: #fff;
+        position: absolute;
+	border-radius: 35px 35px; 
+	-webkit-border-radius: 35px 35px;
+        -moz-border-radius: 35px 35px;
+	border: 2px solid #000;
+	width: 72px;
+	height: 83px;
+	z-index: 20;
+	background: #fff;
 }
 .black_eye {
-            position: absolute;
-			width: 15px;
-			height: 15px;
-			border-radius: 10px;
-			           -webkit-border-radius: 10px;
-                       -moz-border-radius: 10px;
-			background: #333;
-			z-index: 21;
-                    -webkit-animation-name: cate;
-					-webkit-animation-duration: 10s;
-					-webkit-animation-timing-function: linear;
-					-webkit-animation-iteration-count: 200;
+        position: absolute;
+	width: 15px;
+	height: 15px;
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+	background: #333;
+	z-index: 21;
+        -webkit-animation-name: cate;
+	-webkit-animation-duration: 10s;
+	-webkit-animation-timing-function: linear;
+	-webkit-animation-iteration-count: 200;
 }
 @-webkit-keyframes cate {
-      0% {
+          0% {
 	        margin: 0 0 0 0;
 	  }
 	  80% {
@@ -118,44 +116,44 @@ body {
 	  96% {
 	        margin: 0 0 0 0;
 	  }
-      100% {
+          100% {
 	        margin: 0 0 0 0;
 	  }
 }
 .black_left {
              top: 100px;
-			 left: 130px;
+	     left: 130px;
 }
 .black_right {
-             top: 100px;
-			 left: 170px;
+                top: 100px;
+		left: 170px;
 }
 .eye_left {
            top: 45px;
-		   left: 82px;
+	   left: 82px;
 }
 .eye_right {
            top: 45px;
-		   left: 156px;
+	   left: 156px;
 }
 #nose {
         width: 32px;
-		height: 32px;
-		border: 2px solid #000;
-		border-radius: 50px;
-		     -webkit-border-radius: 50px;
-			 -moz-border-radius: 50px;
-	    background: #c93e00;
-		position: absolute;
-		top: 117px;
-		left: 139px;
-		z-index: 30;
+	height: 32px;
+	border: 2px solid #000;
+	border-radius: 50px;
+	-webkit-border-radius: 50px;
+	-moz-border-radius: 50px;
+	background: #c93e00;
+	position: absolute;
+	top: 117px;
+	left: 139px;
+	z-index: 30;
 }
 #nose_light {
-              width: 10px;
-			  height: 10px;
-			  border-radius: 5px;
-			         -webkit-border-radius: 5px; 
+                width: 10px;
+		height: 10px;
+		border-radius: 5px;
+		-webkit-border-radius: 5px; 
 					 -moz-border-radius: 5px;
 			  box-shadow: 19px 8px 5px #fff;
 			         -webkit-box-shadow: 19px 8px 5px #fff;
@@ -452,52 +450,52 @@ body {
 			 left: 40px;
 }
 .arm_rewrite_right {
-                    position: relative;
-					width: 10px;
-					height: 45px;
-					background:#07beea;
-					top: -51px;
-					left: 18px;
+                position: relative;
+		width: 10px;
+		height: 45px;
+		background:#07beea;
+		top: -51px;
+		left: 18px;
 }
 .circle_left {
-            top: 34px;
-			left: 10px;
+              top: 34px;
+	      left: 10px;
 }
 .arm_rewrite_left {
                    position: relative;
-				   width: 9px;
-				   height: 45px;
-				   background: #07beea;
-				   background: linear-gradient(top left, #0096be, #0096be);
-                            background: -webkit-linear-gradient(top left, #0096be, #0096be);
-                            background: -moz-linear-gradient(top left, #0096be, #0096be);
-                            background: -o-linear-gradient(top left, #0096be, #0096be);
-                            background: -ms-linear-gradient(top left, #0096be, #0096be);
+		   width: 9px;
+	           height: 45px;
+		   background: #07beea;
+		   background: linear-gradient(top left, #0096be, #0096be);
+                   background: -webkit-linear-gradient(top left, #0096be, #0096be);
+                   background: -moz-linear-gradient(top left, #0096be, #0096be);
+                   background: -o-linear-gradient(top left, #0096be, #0096be);
+                   background: -ms-linear-gradient(top left, #0096be, #0096be);
                    top: -52px;
-				   left: 92px;
+		   left: 92px;
 }
 #foot {
-       position: relative;
-	   width: 280px;
-	   height: 40px;
-	   top: -111px;
-	   left: 242px;
+        position: relative;
+	width: 280px;
+	height: 40px;
+	top: -111px;
+	left: 242px;
 }
 #foot_left, #foot_right {
             width: 123px;
-			height: 30px; 
-			background: #fff;
-			background: linear-gradient(right top, #fff, #fff 75%, #eee 85%, #999);
-                     background: -webkit-linear-gradient(right top, #fff, #fff 75%, #eee 85%, #999);
-                     background: -moz-linear-gradient(right top, #fff, #fff 75%, #eee 85%, #999);
-                     background: -o-linear-gradient(right top, #fff, #fff 75%, #eee 85%, #999);
-                     background: -ms-linear-gradient(right top, #fff, #fff 75%, #eee 85%, #999);
+	    height: 30px; 
+	    background: #fff;
+	    background: linear-gradient(right top, #fff, #fff 75%, #eee 85%, #999);
+            background: -webkit-linear-gradient(right top, #fff, #fff 75%, #eee 85%, #999);
+            background: -moz-linear-gradient(right top, #fff, #fff 75%, #eee 85%, #999);
+            background: -o-linear-gradient(right top, #fff, #fff 75%, #eee 85%, #999);
+            background: -ms-linear-gradient(right top, #fff, #fff 75%, #eee 85%, #999);
             border: solid 2px #333;
-			border-top-left-radius: 80px;
-			border-bottom-left-radius: 40px;
-			border-top-right-radius: 60px;
+	    border-top-left-radius: 80px;
+	    border-bottom-left-radius: 40px;
+	    border-top-right-radius: 60px;
 			border-bottom-right-radius: 60px;
-                    -webkit-border-top-left-radius: 80px;
+                                -webkit-border-top-left-radius: 80px;
 			        -webkit-border-bottom-left-radius: 40px;
 			        -webkit-border-top-right-radius: 60px;
 			        -webkit-border-bottom-right-radius: 60px;
@@ -553,35 +551,35 @@ body {
 				       -webkit-border-top-left-radius: 40px;
 }
 #shadow_doutai_left, #shadow_doutai_right {
-                     width: 30px;
-					 height: 200px;
-					 box-shadow: -10px 10px 15px rgba(0,0,0,0.45);
+                                width: 30px;
+				height: 200px;
+				box-shadow: -10px 10px 15px rgba(0,0,0,0.45);
                             -webkit-box-shadow: -10px 10px 15px rgba(0,0,0,0.45);
                             -moz-box-shadow: -10px 10px 15px rgba(0,0,0,0.45);
                      position: absolute;
-					 top: 280px;
-					 left: 274px;
-					 z-index: -10;
+		     top: 280px;
+		     left: 274px;
+		     z-index: -10;
 }
 #shadow_doutai_right {
                       box-shadow: 10px 10px 15px rgba(0,0,0,0.35);
                             -webkit-box-shadow: 10px 10px 15px rgba(0,0,0,0.35);
                             -moz-box-shadow: 10px 10px 15px rgba(0,0,0,0.35);
-					  top: 270px;
-					  left: 458px;                     
+			top: 270px;
+			left: 458px;                     
 }
 #shadow_doutai_arm {
-                    width: 85px;
-					height: 165px;
-					box-shadow: -100px 10px 15px rgba(0,0,0,0.25);
+                        width: 85px;
+			height: 165px;
+			box-shadow: -100px 10px 15px rgba(0,0,0,0.25);
                            -webkit-box-shadow: -100px 10px 15px rgba(0,0,0,0.25);
                            -moz-box-shadow: -100px 10px 15px rgba(0,0,0,0.25);
-                    position: absolute;
-					top: 260px;
-					left: 335px;
-					z-index: 10;
-					opacity: 0.5;
-					transform: rotate(-20deg);
+                         position: absolute;
+			top: 260px;
+			left: 335px;
+			z-index: 10;
+			opacity: 0.5;
+			transform: rotate(-20deg);
                          -webkit-transform: rotate(-20deg);
                          -moz-transform: rotate(-20deg);
                          -o-transform: rotate(-20deg);
@@ -594,16 +592,16 @@ body {
                           -moz-border-top-left-radius: 20px;
 }
 #shadow_belt {
-              width: 40px;
-			  height: 30px;
-			  box-shadow: -100px 10px 15px rgba(0,0,0,0.25);
-			  position: absolute;
-			  top: 275px;
-			  left: 352px;
-			  z-index: 10;
-			  border-bottom-left-radius: 40px;
-			     -webkit-: 40px;
-			     -moz-border-bottom-left-radius: 40px;
-			  z-index: 300;
+                width: 40px;
+		height: 30px;
+		box-shadow: -100px 10px 15px rgba(0,0,0,0.25);
+		position: absolute;
+		top: 275px;
+		left: 352px;
+		z-index: 10;
+		border-bottom-left-radius: 40px;
+		-webkit-: 40px;
+		-moz-border-bottom-left-radius: 40px;
+		z-index: 300;
 }
 
